--- a/front/pages/gm/activity-add.html
+++ b/front/pages/gm/activity-add.html
@@ -60,11 +60,12 @@
   <script>
     var config_data;
     var json_data;
+    var $;
     layui.use(['form', 'okLayer', 'okUtils', 'layer'], function () {
       let form = layui.form;
       let okUtils = layui.okUtils;
       let okLayer = layui.okLayer;
-      let $ = layui.jquery;
+      $ = layui.jquery;
       let layer = layui.layer;
       let xmSelect = layui.xmSelect;
 
